syntax = "proto3";
package mapi_grpc_example.api.v1;
option go_package = ".";

// A simple calculator service
service UserService {
  rpc AddUser (AddUserRequest) returns (UserResult) {}
  rpc GetUsers (GetUsersRequest) returns (UsersResult) {}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResult) {}
  rpc CheckReservedName (CheckReservedNameRequest) returns (CheckReservedNameResult) {}
  rpc ExecuteCommand(CommandRequest) returns (CommandResult) {}
  rpc SearchUsersByRole(RoleRequest) returns (UsersResult) {}
  rpc GetUserAvatar(AvatarRequest) returns (AvatarResult) {}
  rpc AuthenticateAdmin(AdminAuthRequest) returns (AuthResult) {}
  rpc GetSystemInfo(SystemInfoRequest) returns (SystemInfoResult) {}
}

// Add a new user to the database
message AddUserRequest {
  string username = 1;
  string email = 2;
}

// Get a collection of users with the given filter
message GetUsersRequest {
  string filter = 1;
}

// Delete a user by ID
message DeleteUserRequest {
  int64 id = 1;
}

// Check to see if a name is reserved
message CheckReservedNameRequest {
  string name = 1;
}

// A user record
message UserResult {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string created = 4;
}

// A collection of user records
message UsersResult {
  repeated UserResult users = 1;
}

// Result from a deleted user
message DeleteUserResult {
  // Number of deleted users
  int64 count = 1;
}

// Returns reserved names matching the query
message CheckReservedNameResult {
  string reserved = 1;
}

// For ExecuteCommand
message CommandRequest {
    string command = 1;
}

message CommandResult {
    string output = 1;
}

// For SearchUsersByRole
message RoleRequest {
    string role = 1;
    string search_term = 2;
}

// For GetUserAvatar
message AvatarRequest {
    string filename = 1;
}

message AvatarResult {
    bytes data = 1;
}

// For AuthenticateAdmin
message AdminAuthRequest {
    string password = 1;
}

message AuthResult {
    bool success = 1;
    string token = 2;
}

// For GetSystemInfo
message SystemInfoRequest {}

message SystemInfoResult {
    string info = 1;
}